widened the service pages banner button to avoid wrap

--- a/css/_template-index.scss
+++ b/css/_template-index.scss
@@ -101,6 +101,7 @@ a.borderbutton.fixedbutton {
     margin-top: 15px;
     color: #e91853;
 }
+a.borderbutton.fixedbutton.banner {width: 40%;}
 a.borderbutton.fixedbutton:hover {
     color: #fff; 
     background-color: #e91853;
